fix css3 button blurriness, added proper download route to detail page

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -868,8 +868,6 @@ td.print-price {
   width: 95px;
   height: 30px;
   text-align: center;
-  -webkit-perspective: 1000px;
-  perspective: 1000px;
 }
 .button .addtocart {
   position: absolute;
@@ -890,6 +888,7 @@ td.print-price {
   width: 95px;
   height: 30px;
   line-height: 32px;
+  border-radius: 4px;
 }
 .button .addtocart > .add {
   background: #3ca03d;
@@ -914,6 +913,12 @@ td.print-price {
   animation-name: rotate;
   -webkit-animation-duration: 1s;
   animation-duration: 1s;
+}
+.button .addtocart.active .add {
+  border-radius: 0 0 4px 4px;
+}
+.button .addtocart.active .added {
+  border-radius: 4px 4px 0 0;
 }
 @-webkit-keyframes rotate {
   35% {
